--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,23 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.32</version>
 </dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+    <version>2.6.7</version>
+</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>6.1.1.Final</version>
+    <type>pom</type>
+</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
