--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,18 @@
         <artifactId>hibernate-core</artifactId>
         <version>4.3.11.Final</version>
     </dependency>
-
+		
+<dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>5.4.32.Final</version>
+    </dependency>
+		
+ <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>7.0.1.Final</version>
+    </dependency>
 
 
 		<dependency>
