--- a/pom.xml
+++ b/pom.xml
@@ -34,17 +34,12 @@
     <version>8.0.32</version>
 </dependency>
 		
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-data-jpa</artifactId>
-    <version>2.6.7</version>
-</dependency>
+
 		
  <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>4.3.11.Final</version>
+        <version>5.4.32.Final</version>
     </dependency>
 		
 <dependency>
@@ -86,7 +81,7 @@
          <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
-    <version>2.20.1</version>
+    <version>3.0.0-M5</version>
       </dependency>
 
 
