--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.port=8082
 #DataSource Configurations
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3307/spec?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=1234
 
+spring.datasource.url=${{ secrets.DB_URL }}
+spring.datasource.password=${{ secrets.DB_PASSWORD }}
+spring.datasource.username=${{ secrets.DB_USER }}
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
