--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-
+<dependency>
+  <groupId>mysql</groupId>
+  <artifactId>mysql-connector-java</artifactId>
+  <version>8.0.0</version> <!-- Update to the desired version -->
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
