--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy WAR app to Azure Web App - springboot-specchecker
 
 on:
@@ -21,8 +18,6 @@ jobs:
         with:
           java-version: '8'
           distribution: 'temurin'
-          
-   
 
       - name: Build with Maven
         run: mvn clean install
@@ -32,7 +27,6 @@ jobs:
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.war'
-          
 
   deploy:
     runs-on: windows-latest
@@ -55,8 +49,11 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2B1075B69D7A4191BEE7A961745C7B58 }}
           package: '*.war'
-          
-      - name: Build and deploy
-        run: |
-          ./mvnw clean install
-          java -jar target/my-app.jar --spring.datasource.url=${{ secrets.DB_URL }} --spring.datasource.password=${{ secrets.DB_PASSWORD }} --spring.datasource.username=${{ secrets.DB_USER }}
+
+      - name: Start Azure Web App
+        run: az webapp start --name 'springboot-specchecker' --resource-group 'DefaultResourceGroup-CAU' --slot 'Production' --subscription 'e6987538-8751-4a72-a29e-a2e6ff0a4c9e
+'
+
+      - name: Wait for Azure Web App to start
+        run: az webapp wait --name 'springboot-specchecker' --resource-group 'DefaultResourceGroup-CAU' --slot 'Production' --subscription e6987538-8751-4a72-a29e-a2e6ff0a4c9e
+' --created
