--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8082
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.url=${{ secrets.DB_URL }}
+spring.datasource.url=jdbc:mysql://localhost:${DB_PORT}/spec?createDatabaseIfNotExist=true
 spring.datasource.password=${{ secrets.DB_PASSWORD }}
 spring.datasource.username=${{ secrets.DB_USER }}
 
