--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=pos-system
-server.port=8082
+server.port=1433
 
 
 #DataSource Configurations
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/spec?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433
 spring.datasource.password=${{ secrets.DB_PASSWORD }}
 spring.datasource.username=${{ secrets.DB_USER }}
 
