--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,18 @@
 spring.application.name=pos-system
 server.port=1433
 
-
-#DataSource Configurations
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433
-spring.datasource.password=${{ secrets.DB_PASSWORD }}
-spring.datasource.username=${{ secrets.DB_USER }}
+# DataSource Configurations
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;database=specchecker;user=admin123@specchecker;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#JPA vendor adaptor configurations
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# JPA vendor adaptor configurations
+spring.jpa.database=sql_server
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
