--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@ spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;dat
 spring.datasource.username=admin123
 spring.datasource.password=Pasi992062290#
 
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 # JPA vendor adaptor configurations
-spring.jpa.database=sql_server
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Azure Key Vault configurations
+spring.azure.keyvault.enabled=true
+spring.azure.keyvault.uri=https://specvault.vault.azure.net/
+spring.azure.keyvault.client-id=8368b75a-5e0b-48a0-9a63-aafefaff800f
+spring.azure.keyvault.client-secret=Specchecker
