--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,7 @@
 		<dependency>
     <groupId>com.microsoft.sqlserver</groupId>
     <artifactId>mssql-jdbc</artifactId>
-    
-    <systemPath>D:/excel-reader/lib/mssql-jdbc-12.2.0.jre8.jar</systemPath> <!-- Update with the actual file path of the JAR file -->
+    <version>12.2.0</version> 
 </dependency>
 
 		<dependency>
