--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,13 @@
 		</dependency>
                     
 		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
-			<version>12.2.0</version> 
-		</dependency>
+    <groupId>com.microsoft.sqlserver</groupId>
+    <artifactId>mssql-jdbc</artifactId>
+    <version>12.2.0.jre8</version>
+    <scope>system</scope>
+    <systemPath>https://raw.githubusercontent.com/imesh-bit/Pasindu/main/lib/mssql-jdbc-12.2.0.jre8.jar</systemPath>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
