--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	 <repositories>
+		 
+        <!-- Repository definitions -->
+        <repository>
+            <id>my-local-repo</id>
+            <url>file://${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,15 +51,13 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-                    
+		
 		<dependency>
-    <groupId>com.microsoft.sqlserver</groupId>
-    <artifactId>mssql-jdbc</artifactId>
-    <version>12.2.0.jre8</version>
-    <scope>system</scope>
-    <systemPath>https://raw.githubusercontent.com/imesh-bit/Pasindu/main/lib/mssql-jdbc-12.2.0.jre8.jar</systemPath>
-</dependency>
-
+        <groupId>com.microsoft.sqlserver</groupId>
+        <artifactId>mssql-jdbc</artifactId>
+        <version>12.2.0.jre8</version>
+    </dependency>
+                   
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
