--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	 <repositories>
-		 
-        <!-- Repository definitions -->
-        <repository>
-            <id>my-local-repo</id>
-            <url>file://${project.basedir}/lib</url>
-        </repository>
-    </repositories>
+
 	
 	<dependencies>
 		<dependency>
@@ -52,10 +45,12 @@
 			<scope>provided</scope>
 		</dependency>
 		
-		<dependency>
+	<dependency>
         <groupId>com.microsoft.sqlserver</groupId>
         <artifactId>mssql-jdbc</artifactId>
-        <version>12.2.0.jre8</version>
+        <version>12.2.0</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/lib/mssql-jdbc-12.2.0.jre8.jar</systemPath>
     </dependency>
                    
 
