--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -48,14 +48,34 @@ jobs:
         with:
           name: java-app
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'springboot-specchecker'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2B1075B69D7A4191BEE7A961745C7B58 }}
-          package: '*.war'
+     name: Deploy to Azure
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Azure credentials
+      run: |
+        echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
+        echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
+        echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
+        echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
+
+    - name: Log in to Azure
+      run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
+
+    - name: Deploy to Azure
+      run: az webapp deploy --subscription "$(cat subscription_id.txt)" --name my-webapp --resource-group my-rg --src-path my-app
+
           
       - name: Build and deploy
         run: |
