--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy WAR app to Azure Web App - springboot-specchecker
 
 on:
@@ -48,36 +45,24 @@ jobs:
         with:
           name: java-app
 
-     name: Deploy to Azure
+      - name: Set up Azure credentials
+        run: |
+          echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
+          echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
+          echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
+          echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
 
-on:
-  push:
-    branches:
-      - main
+      - name: Log in to Azure
+        run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+      - name: Deploy to Azure
+        run: az webapp deploy --subscription "$(cat subscription_id.txt)" --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --src-path "${{ github.workspace }}/target/*.war"
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
 
-    - name: Set up Azure credentials
-      run: |
-        echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
-        echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
-        echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
-        echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
-
-    - name: Log in to Azure
-      run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
-
-    - name: Deploy to Azure
-      run: az webapp deploy --subscription "$(cat subscription_id.txt)" --name my-webapp --resource-group my-rg --src-path my-app
-
-          
       - name: Build and deploy
         run: |
           ./mvnw clean install
-          java -jar target/excel-reader.war --spring.datasource.url=jdbc:mysql://localhost:3307/spec?createDatabaseIfNotExist=true --spring.datasource.password=${{ secrets.DB_PASSWORD }} --spring.datasource.username=${{ secrets.DB_USER }} --server.port=8082
+          java -jar target/excel-reader.war --spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;database=specchecker;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+          spring.datasource.username=admin123
+          spring.datasource.password=Pasi992062290#
+
