--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -56,13 +56,9 @@ jobs:
         run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
 
       - name: Deploy to Azure
-        run: az webapp deploy --subscription "$(cat subscription_id.txt)" --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --src-path "${{ github.workspace }}/target/*.war"
-
+        run: az webapp deploy --subscription "$(cat subscription_id.txt)" --springboot-specchecker --resource-group DefaultResourceGroup-CAU --src-path https://github.com/imesh-bit/pasindu
 
       - name: Build and deploy
         run: |
           ./mvnw clean install
-          java -jar target/excel-reader.war --spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;database=specchecker;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-          spring.datasource.username=admin123
-          spring.datasource.password=Pasi992062290#
-
+          java -jar target/excel-reader.war --spring.datasource.url=jdbc:mysql://localhost:3307/spec?createDatabaseIfNotExist=true --spring.datasource.password=${{ secrets.DB_PASSWORD }} --spring.datasource.username=${{ secrets.DB_USER }} --server.port=8082
