--- a/pom.xml
+++ b/pom.xml
@@ -1,64 +1,122 @@
-name: Build and deploy WAR app to Azure Web App - springboot-specchecker
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.7.10</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>com.excel</groupId>
+	<artifactId>excel-reader</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>excel-reader</name>
+	<description>excel reader</description>
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.7.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.7.8</version>
+		</dependency>
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.32</version>
+		</dependency>
 
-jobs:
-  build:
-    runs-on: windows-latest
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 
-    steps:
-      - uses: actions/checkout@v2
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>12.2.0</version> <!-- Replace with the actual version number of the JDBC driver you downloaded -->
+			<scope>system</scope>
+			<systemPath>D:/excel-reader/lib/mssql-jdbc-12.2.0.jre8.jar</systemPath> <!-- Update with the actual file path of the JAR file -->
+		</dependency>
 
-      - name: Set up Java version
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'temurin'
-          
-      - name: Resolve Maven dependencies
-        run: mvn dependency:resolve
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.7.8</version>
+			<scope>test</scope>
+		</dependency>
 
-      - name: Build with Maven
-        run: mvn clean install
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version>
+		</dependency>
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.war'
-          
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.2</version>
+		</dependency>
 
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.20.1</version>
+		</dependency>
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: java-app
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>12.2.0</version> <!-- Replace with the actual version number of the JDBC driver you downloaded -->
+			<scope>system</scope>
+			<systemPath>D:/excel-reader/lib/mssql-jdbc-12.2.0.jre8.jar</systemPath> <!-- Update with the actual file path of the JAR file -->
+		</dependency>
 
-      - name: Set up Azure credentials
-        run: |
-          echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
-          echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
-          echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
-          echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
 
-      - name: Log in to Azure
-        run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
+	</dependencies>
 
-      - name: Deploy to Azure
-        run: az webapp deploy --subscription "$(cat subscription_id.txt)" --springboot-specchecker --resource-group DefaultResourceGroup-CAU --src-path https://github.com/imesh-bit/pasindu
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 
-      - name: Build and deploy
-        run: |
-          ./mvnw clean install
-          java -jar target/excel-reader.war --spring.datasource.url=jdbc:mysql://localhost:3307/spec?createDatabaseIfNotExist=true --spring.datasource.password=${{ secrets.DB_PASSWORD }} --spring.datasource.username=${{ secrets.DB_USER }} --server.port=8082
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.9.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.1</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.1.0</version> <!-- Replace with the desired version -->
+				<!-- Configuration for the plugin goes here -->
+			</plugin>
+		</plugins>
+
+	</build>
+</project>
