--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -61,4 +61,7 @@ jobs:
       - name: Build and deploy
         run: |
           ./mvnw clean install
-          java -jar target/excel-reader.war --spring.datasource.url=jdbc:mysql://localhost:3307/spec?createDatabaseIfNotExist=true --spring.datasource.password=${{ secrets.DB_PASSWORD }} --spring.datasource.username=${{ secrets.DB_USER }} --server.port=8082
+          java -jar target/excel-reader.war --spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;database=specchecker;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+          --spring.datasource.password=Pasi992062290#
+          --spring.datasource.username=admin123
+          --server.port=1433
