--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.mode
 # Azure Key Vault configurations
 spring.azure.keyvault.enabled=true
 spring.azure.keyvault.uri=https://specvault.vault.azure.net/
-spring.azure.keyvault.client-id=8368b75a-5e0b-48a0-9a63-aafefaff800f
-spring.azure.keyvault.client-secret=Specchecker
+spring.azure.keyvault.client-id=8949c864-9b22-48ba-9f2c-9d78d721b7a7
+spring.azure.keyvault.client-secret=checker
