--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -51,11 +51,11 @@ jobs:
           echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
           echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
           echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
-      - name: Log in to Azure with service principal
-        run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
+#       - name: Log in to Azure with service principal
+#         run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
 
       - name: Deploy to Azure Web App
-        run: az webapp deploy --subscription "$(cat subscription_id.txt)" --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --type WAR --path '${{ github.workspace }}/target/*.war'
+        run: az webapp deploy --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --type WAR --path '${{ github.workspace }}/target/*.war' --identity
 
       - name: Build and deploy
         run: |
