--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -55,7 +55,7 @@ jobs:
 #         run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
 
       - name: Deploy to Azure Web App
-        run: az webapp deploy --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --type WAR --path '${{ github.workspace }}/target/*.war' --identity
+        run: az webapp deploy --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --type war --path '${{ github.workspace }}/target/*.war' --identity
 
       - name: Build and deploy
         run: |
