--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -54,7 +54,8 @@ jobs:
 #         run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
 
       -  name: Deploy to Azure Web App
-         run: az webapp deployment source config-zip --name <web-app-name> --resource-group <resource-group-name> --src https://github.com/imesh-bit/pasindu/archive/main.zip
+         run: az webapp deployment source config-zip --name springboot-specchecker --resource-group DefaultResourceGroup-CAU --src https://github.com/imesh-bit/pasindu/archive/main.zip
+
 
       - name: Build and deploy
         run: |
