--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -53,8 +53,8 @@ jobs:
 #       - name: Log in to Azure with service principal
 #         run: az login --service-principal -u "$(cat client_id.txt)" -p "$(cat client_secret.txt)" -t "$(cat tenant_id.txt)"
 
-      -  name: Deploy to Azure Web App
-         run: az webapp deployment source config-zip --name springboot-spec*** --resource-group DefaultResourceGroup-CAU --src https://github.com/imesh-bit/pasindu/archive/main.zip
+#       -  name: Deploy to Azure Web App
+#          run: az webapp deployment source config-zip --name springboot-spec*** --resource-group DefaultResourceGroup-CAU --src https://github.com/imesh-bit/pasindu/archive/main.zip
 
 
       - name: Build and deploy
