--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -60,5 +60,5 @@ jobs:
       - name: Build and deploy
         run: |
          ./mvnw clean install
-          java -jar target/springboot-specchecker.war --spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;database=specchecker;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30 --spring.datasource.password=Pasi992062290# --spring.datasource.username=admin123 --server.port=1433
+             java -jar springboot-specchecker.war --spring.datasource.url=jdbc:sqlserver://specchecker.database.windows.net:1433;database=specchecker;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30; --spring.datasource.password=Pasi992062290# --spring.datasource.username=admin123 --server.port=1433
 
