--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -56,11 +56,12 @@ jobs:
 #          run: az webapp deployment source config-zip --name springboot-spec*** --resource-group DefaultResourceGroup-CAU --src https://github.com/imesh-bit/pasindu/archive/main.zip
 
 
-      - name: Build and deploy
-        run: |
-          ./mvnw clean install
-          java -jar target/springboot-specchecker.war \
-          --spring.datasource.url=jdbc:sqlserver://example.database.windows.net:1433;database=your_database_name;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30 \
-          --spring.datasource.password=Pasi992062290# \
-          --spring.datasource.username=admin123 \
-          --server.port=1433
+     - name: Build and deploy
+  run: |
+    ./mvnw clean install
+    java -jar target/springboot-specchecker.war \
+      --spring.datasource.url=jdbc:sqlserver://example.database.windows.net:1433;database=your_database_name;encrypt=true;trustServerCertificate=false;hostNameInCertificate=\*.database.windows.net;loginTimeout=30 \
+      --spring.datasource.password=Pasi992062290# \
+      --spring.datasource.username=admin123 \
+      --server.port=1433
+
