--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -43,6 +43,11 @@ jobs:
         with:
           name: java-app
 
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+           az version
+
       - name: Set up Azure credentials
         run: |
           echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
