--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -56,7 +56,6 @@ jobs:
 
       - name: Deploy to Azure Web App
         run: |
-         az webapp deployment source config-zip --resource-group DefaultResourceGroup-CAU --name Specchecker-frontend --src D:/excel-reader/target/app.zip
-
+           az webapp deployment source config-zip --resource-group DefaultResourceGroup-CAU --name springboot-specchecker --src app.zip
 
         
