--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -59,7 +59,11 @@ jobs:
 
 
       - name: Deploy to Azure Web App
-        run: |
-           az webapp deployment source config-zip --resource-group DefaultResourceGroup-CAU --name springboot-specchecker --src app.zip
+        uses: Azure/webapps-deploy@v2
+        with:
+          app-name: 'springboot-specchecker'
+          slot-name: 'production' # optional
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: '${{ github.workspace }}/target/*.war'
 
         
