--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -29,10 +29,9 @@ jobs:
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.war'
-          
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
@@ -43,7 +42,6 @@ jobs:
         with:
           name: java-app
 
-     
       - name: Set up Azure credentials
         run: |
           echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
@@ -51,17 +49,10 @@ jobs:
           echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
           echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
 
-#       - name: Set up Azure credentials and login
-#         uses: azure/login@v1
-#         with:
-#              creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Deploy to Azure Web App
-        uses: Azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'springboot-specchecker'
-          slot-name: 'production' # optional
+          app-name: 'your-app-name'
+          slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: '${{ github.workspace }}/target/*.war'
-
-        
