--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -42,17 +42,17 @@ jobs:
         with:
           name: java-app
 
-      - name: Set up Azure credentials
-        run: |
-          echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
-          echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
-          echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
-          echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
+#       - name: Set up Azure credentials
+#         run: |
+#           echo ${{ secrets.AZURE_SUBSCRIPTION_ID }} > subscription_id.txt
+#           echo ${{ secrets.AZURE_TENANT_ID }} > tenant_id.txt
+#           echo ${{ secrets.AZURE_CLIENT_ID }} > client_id.txt
+#           echo ${{ secrets.AZURE_CLIENT_SECRET }} > client_secret.txt
           
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'your-app-name'
+          app-name: 'springboot-specchecker'
           slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: '${{ github.workspace }}/target/*.war'
