--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -48,7 +48,10 @@ jobs:
                 az --version
 
       - name: Log in to Azure
-        run: az login --service-principal -u "${{ secrets.AZURE_CREDENTIALS.clientId }}" -p "${{ secrets.AZURE_CREDENTIALS.clientSecret }}" --tenant "${{ secrets.AZURE_CREDENTIALS.tenantId }}"
+        run: az login --use-device-code 
+
+
+
 
 
 
