--- a/.github/workflows/main_springboot-specchecker.yml
+++ b/.github/workflows/main_springboot-specchecker.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -62,4 +62,4 @@ jobs:
           app-name: 'springboot-specchecker'
           slot-name: 'production'
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_fcd70d5812f148bbbb69117c02e0f292 }}
-          package: '*.war'
+          package: '*.jar'
